--- a/.github/workflows/terraform-cd.yml
+++ b/.github/workflows/terraform-cd.yml
@@ -41,4 +41,10 @@ jobs:
 
       - name: Terraform Apply
         id: apply
+        env:
+          TF_VAR_env: ${{ secrets.ENV }}
+          TF_VAR_vpc_cidr: ${{ secrets.VPC_CIDR }}
+          TF_VAR_public_subnet_cidr: ${{ secrets.PUBLIC_SUBNET_CIDR }}
+          TF_VAR_az: ${{ secrets.AZ }}
+          TF_VAR_owner: ${{ secrets.OWNER }}
         run: terraform apply -auto-approve -input=false
