--- a/.github/workflows/terraform-ci.yml
+++ b/.github/workflows/terraform-ci.yml
@@ -49,6 +49,12 @@ jobs:
 
       - name: Terraform Plan
         id: plan
+        env:
+          TF_VAR_env: ${{ secrets.ENV }}
+          TF_VAR_vpc_cidr: ${{ secrets.VPC_CIDR }}
+          TF_VAR_public_subnet_cidr: ${{ secrets.PUBLIC_SUBNET_CIDR }}
+          TF_VAR_az: ${{ secrets.AZ }}
+          TF_VAR_owner: ${{ secrets.OWNER }}
         run: terraform plan -input=false
 
       - name: Security Scan (tfsec)
