Fix: Corrected the proper order in how the workflows run to prevent state access or locking conflicts

--- a/.github/workflows/terraform-cd.yml
+++ b/.github/workflows/terraform-cd.yml
@@ -1,12 +1,10 @@
 name: Terraform CD
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+  workflow_run:
+    workflows: ["Terraform CI"]
+    types:
+      - completed
 
 jobs:
   terraform-ci:
