--- a/.github/workflows/terraform-ci.yml
+++ b/.github/workflows/terraform-ci.yml
@@ -55,6 +55,8 @@ jobs:
           TF_VAR_public_subnet_cidr: ${{ secrets.PUBLIC_SUBNET_CIDR }}
           TF_VAR_az: ${{ secrets.AZ }}
           TF_VAR_owner: ${{ secrets.OWNER }}
+          TF_VAR_private_subnet_cidr: ${{ secrets.PRIVATE_SUBNET_CIDR }}
+          TF_VAR_private_az: ${{ secrets.PRIVATE_AZ }}
         run: terraform plan -input=false
 
       - name: Security Scan (tfsec)
