--- a/.github/workflows/terraform-ci.yml
+++ b/.github/workflows/terraform-ci.yml
@@ -57,6 +57,9 @@ jobs:
           TF_VAR_owner: ${{ secrets.OWNER }}
           TF_VAR_private_subnet_cidr: ${{ secrets.PRIVATE_SUBNET_CIDR }}
           TF_VAR_private_az: ${{ secrets.PRIVATE_AZ }}
+          TF_VAR_ami: ${{ secrets.AMI }}
+          TF_VAR_instance_type: ${{ secrets.EC2_INSTANCE_TYPE }}
+          TF_VAR_key_name: ${{ secrets.KEY_NAME }}
         run: terraform plan -input=false
 
       - name: Security Scan (tfsec)
