--- a/.github/workflows/terraform-ci.yml
+++ b/.github/workflows/terraform-ci.yml
@@ -11,9 +11,14 @@ on:
 jobs:
   terraform-ci:
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        env-set: [1, 2] # 1 = dev, 2 = dev2
+
     defaults:
       run:
-        working-directory: ./envs/dev
+        working-directory: ./envs/${{ matrix.env-set == 1 && 'dev' || 'dev2' }}
 
     permissions:
       contents: read
@@ -50,16 +55,18 @@ jobs:
       - name: Terraform Plan
         id: plan
         env:
-          TF_VAR_env: ${{ secrets.ENV }}
-          TF_VAR_vpc_cidr: ${{ secrets.VPC_CIDR }}
-          TF_VAR_public_subnet_cidr: ${{ secrets.PUBLIC_SUBNET_CIDR }}
-          TF_VAR_az: ${{ secrets.AZ }}
+          TF_VAR_env: ${{ secrets[format('ENV{0}', matrix.env-set)] }}
+          TF_VAR_vpc_cidr: ${{ secrets[format('VPC_CIDR{0}', matrix.env-set)] }}
+          TF_VAR_public_subnet_cidr: ${{ secrets[format('PUBLIC_SUBNET_CIDR{0}', matrix.env-set)] }}
+          TF_VAR_az: ${{ secrets[format('AZ{0}', matrix.env-set)] }}
           TF_VAR_owner: ${{ secrets.OWNER }}
-          TF_VAR_private_subnet_cidr: ${{ secrets.PRIVATE_SUBNET_CIDR }}
-          TF_VAR_private_az: ${{ secrets.PRIVATE_AZ }}
+          TF_VAR_private_subnet_cidr: ${{ secrets[format('PRIVATE_SUBNET_CIDR{0}', matrix.env-set)] }}
+          TF_VAR_private_az: ${{ secrets[format('PRIVATE_AZ{0}', matrix.env-set)] }}
           TF_VAR_ami: ${{ secrets.AMI }}
           TF_VAR_instance_type: ${{ secrets.EC2_INSTANCE_TYPE }}
           TF_VAR_key_name: ${{ secrets.KEY_NAME }}
+          TF_VAR_requester_region: ${{ secrets.REQUESTER_REGION }}
+          TF_VAR_accepter_region: ${{ secrets.ACCEPTER_REGION }}
         run: terraform plan -input=false
 
       - name: Security Scan (tfsec)
